logs/pipeline_master.log
[01:55:14] ═══ BEFUDDLED COW PIPELINE START ═══
[01:55:14] Step 6: Running Julia solver (this takes ~45 min for 1024px)...
  Activating project at `~/causticsEngineering`
-0.8425591249940911
0.7323656057247624
Loss:
Minimum: -0.8425591249940911
Maximum: 0.7323656057247624
SUM: -5.820766091346741e-11
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
46.49137380001131
30.850482793007817
19.19696862663983
11.756792096413088
7.189363162633074
4.393797574835465
2.684428444363084
1.6397778548209894
1.001551129351025
0.611695596311168
0.37357922822594447
0.22815056682737425
0.1393334783785243
0.08509158008575167
0.051965616650010524
0.03173544923666669
0.019380843607441432
0.011835875774058889
0.0072281631632207305
0.004414234226166336
Overall min_t:0.9598346167088723
-1.2048467334296349
1.0667014786633302
Loss:
Minimum: -1.2048467334296349
Maximum: 1.0667014786633302
SUM: -2.9103830456733704e-11
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
26.69124783479118
16.103043971313895
9.81772470478441
5.984290811231874
3.6525810173488673
2.2301289093693826
1.3617811663268415
0.8315851820847748
0.5078297502991871
0.3101246763238597
0.18939058872265266
0.11565986891369792
0.07063310149101996
0.04313547578791147
0.02634276357785479
0.01608749107414537
0.009824612540256062
0.005999880995810095
0.003664121743548802
0.002237675937896813
Overall min_t:0.9040593860291508
-1.3365836679432854
1.214713523430858
Loss:
Minimum: -1.3365836679432854
Maximum: 1.214713523430858
SUM: 7.275957614183426e-12
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
14.95201916295572
8.1358926586103
4.956056857894032
3.0251440601343678
1.8436337298402241
1.1282953316808346
0.6899116295576849
0.4216330687970454
0.25759798273298923
0.15735242630605134
0.09610816861813533
0.05869779854547498
0.035848316854392506
0.02189310512554244
0.013370300102399528
0.00816530084349287
0.004986566693602305
0.003045300599093259
0.0018597654959766475
0.0011357582863543852
Overall min_t:0.48150060966320474
-1.3774967213156852
1.3051295252528567
Loss:
Minimum: -1.3774967213156852
Maximum: 1.3051295252528567
SUM: -1.0913936421275139e-11
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
11.189834753144966
5.808259596183256
3.573767713940444
2.176815271056958
1.322878512276157
0.8056187608754878
0.49294109055168367
0.3013740154671526
0.18416663788404397
0.112511739484324
0.0687253228590013
0.04197558234169113
0.025636236569115078
0.015656653646727442
0.00956172453438285
0.00583941404848247
0.003566152107255223
0.0021778555706729722
0.0013300178775762128
0.0008122419297175558
Overall min_t:0.25501176846691287
-1.3244693211275802
1.2447976551479192
Loss:
Minimum: -1.3244693211275802
Maximum: 1.2447976551479192
SUM: -7.275957614183426e-12
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
9.679405966205664
4.916025009469328
3.0380285351657266
1.848862803509086
1.1226395835285201
0.6830065367549959
0.4172538733824788
0.25514655559170657
0.15593368672151908
0.09526923991996555
0.05819511145062001
0.035544709988338224
0.021708879790722016
0.013258210229927141
0.008096993645179833
0.004944902884014426
0.00301987460753505
0.001844244159071367
0.0011262815915175502
0.0006878203829761384
Overall min_t:0.13425678510124664
-1.300010725871707
1.2091851308465196
Loss:
Minimum: -1.300010725871707
Maximum: 1.2091851308465196
SUM: -3.637978807091713e-12
(1024, 1024)
(1024, 1024)
(1024, 1024)
Building Phi
8.987408784441532
4.515084612861296
2.7946859381062086
1.7001993669638737
1.0319965394468456
0.62771399906275
0.383108328242656
0.23428570943757052
0.14319110789499803
0.08748634790444897
0.05344175166318091
0.03264171294667733
0.01993597839108721
0.012175485569955338
0.007435769262554574
0.004541091836058325
0.002773266783465072
0.0016936407771434396
0.001034308104364263
0.0006316522695228373
Overall min_t:0.06908282087634261
9.765625e-5
Have all the divergences
Divergence sum: 0.9225328102499191
0.04027525083466105
0.0252079405229523
0.015529040639412637
0.009499081075010256
0.005807970789153484
0.003549537098509842
0.002168634648369621
0.0013247130105227736
0.0008091168836732764
0.0004941676145425832
0.00030180199138868846
0.00018431521730084203
0.00011256289910809163
6.874268127111099e-5
4.198131231343662e-5
2.5638027077076754e-5
1.565714775760564e-5
Convergence reached at step 8955 with max_update of 9.99576168084346e-6
Example heights: 27.99878634456097  and  27.99878634456097 and 37.99878634456097
Specs: 1025  1025  2101250  4096  2097152 4202496
We now have 2101250 valid nodes
We've filled up 2097152 triangles
We've filled up 4194304 triangles
[02:04:06] Step 6 complete.
[02:04:06] Step 7: Verifying OBJ geometry...
  File "/Users/admin/causticsEngineering/verify_obj.py", line 34
    print(f"  Dome height:   {dome_mm:.2f} mm  ({'✓ fits in 1\" acrylic' if dome_mm < 25.4 else '⚠ EXCEEDS 1\" ACRYLIC THICKNESS'})")
                                                                                                                                        ^
SyntaxError: f-string expression part cannot include a backslash
[02:04:06] Step 7 complete.
[02:04:06] Step 9: Running forward ray trace (4-pass, ~35 min)...
/Users/admin/causticsEngineering/simulate_befuddled.py:146: RuntimeWarning: divide by zero encountered in divide
  t_pln  = np.where(np.abs(dz_e) > 1e-12, (plane_z - exit_p[:, 2]) / dz_e, -1.0)
Parsing OBJ...
  2,101,250 vertices  |  4,202,496 faces
  Lens Z: -0.01953 → 0.01451  |  span 0.2000 m  |  dome height 0.03404 m
  Light: [0.10018984 0.10019531 0.21450792]  |  Plane z: -0.21953
  Top-surface faces: 2,100,744

Tracing rays  (4 passes, Gaussian splat r=3)...
  100,000 / 2,100,744  (5%)  200,000 / 2,100,744  (10%)  300,000 / 2,100,744  (14%)  400,000 / 2,100,744  (19%)  500,000 / 2,100,744  (24%)  600,000 / 2,100,744  (29%)  700,000 / 2,100,744  (33%)  800,000 / 2,100,744  (38%)  900,000 / 2,100,744  (43%)  1,000,000 / 2,100,744  (48%)  1,100,000 / 2,100,744  (52%)  1,200,000 / 2,100,744  (57%)  1,300,000 / 2,100,744  (62%)  1,400,000 / 2,100,744  (67%)  1,500,000 / 2,100,744  (71%)  1,600,000 / 2,100,744  (76%)  1,700,000 / 2,100,744  (81%)  1,800,000 / 2,100,744  (86%)  1,900,000 / 2,100,744  (90%)  2,000,000 / 2,100,744  (95%)  2,100,000 / 2,100,744  (100%)  2,100,744 / 2,100,744  (105%)
  Hits on plane: 8,388,609  (99.8% hit rate across 4 passes)
Saved cache → befuddled_accum.npy
Rendering image...
Applied post-process Gaussian smooth (sigma=0.5)
Done → /Users/admin/causticsEngineering/examples/caustic_befuddled_v1.png
[02:04:46] Step 9 complete.
[02:04:46] Step 10: Running make_physical_lens.py...
── Physical Lens Scaler ──────────────────────────────
  Input:          original_image.obj
  Output:         physical_lens_8x8.obj
  Scale factor:   2.0320x  (all axes)
  Physical throw: 406.4 mm  (16.0")

Parsing OBJ...

── Native mesh ───────────────────────────────────────
  Vertices:       2,101,250
  XY span:        200.01 mm
  Dome height:    34.04 mm

── Scaled (physical) ─────────────────────────────────
  XY span:        406.42 mm  (16.001")
  Dome height:    69.17 mm  (2.723")
  Throw distance: 406.4 mm  (16.00")

── WARNINGS ──────────────────────────────────────────
  ⚠  DOME 69.2mm EXCEEDS 1" MATERIAL (25.4mm) — cannot mill
[02:04:51] Step 10 complete.
[02:04:51] Step 11: Running comparative analysis...
Loading images...
Computing metrics...

═══ METRIC REPORT ═══════════════════════════════════════════════
  SSIM(befuddled caustic, befuddled input):  0.1207
  SSIM(cow v3 caustic, original cow):        0.0872
  Pearson r(befuddled, brightness):          -0.1958
  Pearson r(befuddled, edges):               +0.2185
  Pearson r(cow v3, brightness):             -0.1014
  Pearson r(cow v3, edges):                  +0.3151

  Brightness stats:
    befuddled     mean=0.1641  std=0.2154  p75=0.3882  p90=0.4706  p99=0.6549
    cow v3        mean=0.1117  std=0.1552  p75=0.2451  p90=0.3162  p99=0.6126

  Quadrant brightness (bottom-right = background):
  Region               Input    Cow v3   Befuddled
  top-left             0.564     0.104       0.182
  top-right            0.728     0.129       0.196
  bottom-left          0.173     0.117       0.136
  bottom-right         0.389     0.097       0.142  ← KEY

  Bottom-right improvement (befuddled vs v3): +0.0451
═══════════════════════════════════════════════════════════════════

Rendering 9-panel analysis figure...
Saved → /Users/admin/causticsEngineering/examples/befuddled_analysis_v1.png
Writing HANDOFF_BEFUDDLED_v1.md ...
Saved → HANDOFF_BEFUDDLED_v1.md

Analysis complete.
[02:04:56] Step 11 complete.
[02:04:56] Step 12: Committing results...
[main 46b6e0d] befuddled cow v1: option-A input, 4-pass splat, 8x8 physical
 24 files changed, 1536 insertions(+), 1 deletion(-)
 create mode 100644 HANDOFF_BEFUDDLED_v1.md
 create mode 100644 analyze_befuddled.py
 create mode 100644 examples/befuddled_accum.npy
 create mode 100644 examples/befuddled_analysis_v1.png
 create mode 100644 examples/befuddled_cow_solver_input.jpg
 create mode 100644 examples/befuddled_meta.npy
 create mode 100644 examples/caustic_befuddled_v1.png
 create mode 100644 logs/analysis_befuddled.log
 create mode 100644 logs/julia_befuddled.log
 create mode 100644 logs/physical_lens.log
 create mode 100644 logs/pipeline_master.log
 create mode 100644 logs/raytrace_befuddled.log
 create mode 100644 logs/verify_obj.log
 create mode 100644 make_physical_lens.py
 create mode 100755 run_befuddled_pipeline.sh
 create mode 100644 simulate_befuddled.py
 create mode 100644 verify_obj.py
[02:04:57] Step 12 complete.
[02:04:57] ═══ PIPELINE COMPLETE ═══
[02:04:57] Outputs:
[02:04:57]   examples/caustic_befuddled_v1.png
[02:04:57]   examples/befuddled_analysis_v1.png
[02:04:57]   examples/physical_lens_8x8.obj
[02:04:57]   HANDOFF_BEFUDDLED_v1.md
[02:04:57]   logs/*.log
